--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						result = []
 					}
 
-					var indexer = current + '/' + max
+					var indexer = '(' + current + '/' + max + ')'
 					var tweet = indexer;
 
 					while(pos < words.length && tweet.length + words[pos].length < 280)
